# mmcot-with-specialization

./: .gitignore  README.md  main.py  pyproject.toml
code/: finetune.py  label_thoughts.py  preprocess.py
logs/: job_5751228.out  job_5756364.err  job_5756364.out
